--- a/Week-2/Portfolio/style.css
+++ b/Week-2/Portfolio/style.css
@@ -194,3 +194,126 @@ section {
     border-radius: 20% 80% 20% 80% / 20% 80% 20% 80%;
   }
 }
+
+/* Services */
+.services {
+  background-color: var(--bg-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15rem;
+}
+.services-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.services-box {
+  flex: 1 1 30rem;
+  background-color: var(--second-bg-color);
+  padding: 3rem 2rem;
+  border-radius: 2rem;
+  text-align: center;
+  transition: all 0.3s;
+  border: 0.2rem solid transparent;
+}
+.services-box i {
+  font-size: 7rem;
+  color: var(--main-color);
+}
+.services-box h3 {
+  font-size: 2.6rem;
+  margin-bottom: 2rem;
+}
+.services-box p {
+  font-size: 1.6rem;
+  line-height: 1.5;
+  margin-bottom: 3rem;
+}
+.services-btn {
+  background-color: var(--main-color);
+  padding: 1rem 3rem;
+  border-radius: 4rem;
+  font-size: 1.6rem;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+  transform: all 0.3s;
+}
+.services-box:hover {
+  border: 0.2rem solid var(--main-color);
+  transform: scale(1.05);
+}
+.services-box:hover .services-btn {
+  filter: drop-shadow(0 0 1rem var(--main-color));
+}
+
+/* Portfolio */
+.portfolio {
+  background-color: var(--second-bg-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+}
+.portfolio-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  gap: 3rem;
+}
+.portfolio-box {
+  position: relative;
+  border-radius: 2rem;
+  overflow: hidden;
+  box-shadow: 0 0 1rem var(--bg-color);
+}
+.portfolio-box img {
+  width: 100%;
+  transition: all 0.3s;
+}
+.portfolio-layer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.8) 30%,
+    var(--main-color) 100%
+  );
+  transform: translateY(100%);
+  transition: all 0.3s;
+}
+.portfolio-layer h4 {
+  font-size: 3rem;
+}
+.portfolio-layer p {
+  font-size: 1.6rem;
+  margin: 1rem 0 2rem;
+}
+.portfolio-layer a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  background-color: var(--text-color);
+  font-size: 2rem;
+  color: var(--second-bg-color);
+}
+.portfolio-box:hover .portfolio-layer {
+  transform: translateY(0);
+}
+.portfolio-box:hover img {
+  transform: translateY(-100%);
+}
